# GlobalPose

./: GlobalPose.code-workspace
.cursor/rules/: globalpose-core.mdc  markdown-math-rendering.mdc  python-conventions.mdc
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-03-29_14-10-35Z-cursor-rules-addition.md  2026-03-29_14-13-09Z-cursor-rules-addition.md  2026-03-29_14-26-12Z-文档自定义库功能对照.md  2026-03-29_15-41-59Z-物理模块转移到unity.md  2026-03-30_04-36-07Z-现在我已经按照历史中的创建好c++dll了，也测试成功了，接下来要怎么做来将物理模块搬运到unity中.md  2026-03-30_06-07-03Z-c++-dll-integration-into-unity.md  2026-04-12_05-04-19Z-context-from-my-ide.md
carticulate_withoutCompile/: .gitignore  CMakeLists.txt  build_unity_dll.bat  vcpkg-configuration.json  vcpkg.json
carticulate_withoutCompile/build_unity/: CMakeCache.txt
carticulate_withoutCompile/kinematics/: kinematic_optimizer.cpp
carticulate_withoutCompile/unity_bridge/: CarticulatePlaymodeTest.cs  CarticulateUnity.cs  carticulate_unity.cpp  carticulate_unity_api.h
carticulate_withoutCompile/vcpkg-overlay-ports/g2o/: eigen3-config-find.patch  portfile.cmake  vcpkg.json
docs/: net_physics_optimization.md  论文流程.md
